--- a/P000349.opf/meta.yml
+++ b/P000349.opf/meta.yml
@@ -3,5 +3,18 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W23625
   title: ཀློང་ཆེན་སྙིང་གི་ཐིག་ལེ་ལས་ཐུན་མོང་གི་སྔོན་འགྲོ་སེམས་སྦྱོང་རྣམ་པ་བདུན་དང་བླ་མ་རྒྱང་འབོད་ཀྱི་རྩ་བ་རྡོ་རྗེའི་ཚིག་འགྲེལ་མ་བུ་ལྷན་ཐབས།
-  volume: ''
+  volume:
+    e13f26346e344c678aa0dec2c7343eeb:
+      image_group_id: I1KG12821
+      title: Volume 1 of klong chen snying gi thig le las thun mong gi sngon 'gro
+        sems sbyong rnam pa bdun/
+      volume_number: 1
+      total_pages: 336
   author: ''
+ebook_metadata:
+  title: ཀློང་ཆེན་སྙིང་གི་ཐིག་ལེ་ལས་ཐུན་མོང་གི་སྔོན་འགྲོ་སེམས་སྦྱོང་རྣམ་པ་བདུན་དང་བླ་མ་རྒྱང་འབོད་ཀྱི་རྩ་བ་རྡོ་རྗེའི་ཚིག་འགྲེལ་མ་བུ་ལྷན་ཐབས།
+  author: ''
+  sku: P000349
+  cover: cover.jpg
+  layers:
+  - pagination
