--- a/P000349.opf/layers/v001/Pagination.yml
+++ b/P000349.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 974374f2ef5146adb9eb7dc673264301
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   3a6fd6c577b74ad3802b00c6fd8fcdb1:
